--- a/index.html
+++ b/index.html
@@ -10,7 +10,36 @@
 </head>
 
 <body>
-  
+ <div class="navbar">
+     <nav class="nav-items">
+         <ul class="nav-list">
+             <li><a class="nav-link" href="index2.html">Another design page</a></li>
+         </ul>
+     </nav>
+ </div>
+  <form action="" class="neumorphism__form">
+    <div class="form__container">
+      <div class="form__content">
+        <label for="username">Username</label>
+        <input type="text" class="form__input" placeholder="Username..." />
+      </div>
+      <div class="form__content">
+        <label for="mail">Email</label>
+        <input type="text" class="form__input" placeholder="Username..." />
+      </div>
+      <div class="form__content">
+        <label for="message">Message</label>
+        <textarea name="message" id="message" cols="20" class="form__input" rows="2"></textarea>
+      </div>
+      <div class="form__content">
+        <input type="checkbox" class="checkbox" name="newsletter"  id="newssletter">
+        <label for="message">I agreed with conditions</label>
+      </div>
+      <div class="form__button">
+       <button>Send message</button>
+      </div>
+    </div>
+  </form>
 </body>
 
 </html>
